correcting icon offset on mobile

--- a/src/components/weather/weather.component.scss
+++ b/src/components/weather/weather.component.scss
@@ -7,6 +7,8 @@
 
 
         @media(max-width: $mobile-width) {
+            margin-top: 5px;
+            margin-right: 0;
             text-align: center !important;
         }
     }
